examples/bad/ERROR_NONEXHAUSTIVE_MATCH_PATTERNS/ne_nat_1.st
language core;

extend with #structural-patterns, #natural-literals;

fn main(n : Nat) -> Nat {
  return match 5 {
    	0 => 0
    | succ(succ(n)) => 0
   }
}

//ERROR_NONEXHAUSTIVE_MATCH_PATTERNS
